--- a/api/package.json
+++ b/api/package.json
@@ -2,5 +2,8 @@
   "type": "module",
   "name": "get-enrich-api",
   "version": "1.0.0",
-  "dependencies": {}
+  "dependencies": {},
+  "engines": {
+    "node": ">=18.0.0"
+  }
 }
