--- a/api/vercel.json
+++ b/api/vercel.json
@@ -1,9 +1,12 @@
 {
-  "type": "module",
-  "name": "get-enrich-api",
-  "version": "1.0.0",
-  "dependencies": {},
-  "engines": {
-    "node": "22.x"
+  "functions": {
+    "api/batch-enrich.js": {
+      "runtime": "nodejs22.x",
+      "maxDuration": 20
+    },
+    "api/batch-enrich-company-name-fallback.js": {
+      "runtime": "nodejs22.x",
+      "maxDuration": 20
+    }
   }
 }
