--- a/api/vercel.json
+++ b/api/vercel.json
@@ -7,6 +7,17 @@
     "api/batch-enrich-company-name-fallback.js": {
       "runtime": "nodejs22.x",
       "maxDuration": 20
+    },
+    "api/batch-enrich-franchise.js": {
+      "runtime": "nodejs22.x",
+      "maxDuration": 20
+    },
+    "api/batch-clean-titles-and-locations": {
+      "runtime": "nodejs22.x",
+      "maxDuration": 20
     }
+  },
+  "env": {
+    "OPENAI_API_KEY": "@openai-api-key"
   }
 }
