--- a/api/package.json
+++ b/api/package.json
@@ -1,16 +1,23 @@
 {
   "type": "module",
   "name": "get-enrich-api",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "description": "ShowRevv Lead Enrichment System API for cleaning and enriching lead data",
   "dependencies": {
-    "openai": "^4.0.0"
+    "openai": "4.0.0"
   },
   "engines": {
     "node": ">=22"
   },
   "scripts": {
     "start": "vercel dev",
-    "deploy": "vercel deploy --prod"
-  }
+    "deploy": "vercel deploy --prod",
+    "test": "echo 'Run manual tests as described in script comments.'"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/cdearman90/get-enrich-api.git"
+  },
+  "author": "cdearman90",
+  "license": "MIT"
 }
