--- a/api/vercel.json
+++ b/api/vercel.json
@@ -16,4 +16,23 @@
       "runtime": "nodejs22.x",
       "maxDuration": 20
     }
+  },
+  "env": {
+    "OPENAI_API_KEY": "@openai_api_key"
+  },
+  "routes": [
+    { "src": "/api/batch-enrich", "dest": "/api/batch-enrich.js" },
+    { "src": "/api/batch-enrich-company-name-fallback", "dest": "/api/batch-enrich-company-name-fallback.js" },
+    { "src": "/api/batch-enrich-franchise", "dest": "/api/batch-enrich-franchise.js" },
+    { "src": "/api/batch-clean-titles-and-locations", "dest": "/api/batch-clean-titles-and-locations.js" }
+  ],
+  "builds": [
+    {
+      "src": "api/**/*.js",
+      "use": "@vercel/node"
+    }
+  ],
+  "comments": {
+    "maxDuration": "Set to 20s to match Vercel paid tier limit; scripts enforce an 18s timeout to ensure partial results are returned."
+  }
 }
