--- a/api/package.json
+++ b/api/package.json
@@ -4,11 +4,13 @@
   "version": "1.1.0",
   "description": "ShowRevv Lead Enrichment System API for cleaning and enriching lead data.",
   "dependencies": {
-    "openai": "^4.0.0",
-    "next": "^14.2.0"
+    "openai": "4.95.0",
+    "next": "15.3.1"
   },
   "devDependencies": {
-    "eslint": "^9.24.0"
+    "eslint": "^9.24.0",
+    "husky": "^9.1.6",
+    "lint-staged": "^15.2.10"
   },
   "engines": {
     "node": ">=22"
@@ -19,6 +21,14 @@
     "test": "echo Run manual tests as described in script comments.",
     "lint": "eslint .",
     "build": "npm run lint"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.js": "eslint --fix"
   },
   "repository": {
     "type": "git",
