--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
     "husky": "^9.1.7",
     "lint-staged": "^15.5.0"
   },
+ "dependencies": {
+  "openai": "4.0.0",
+  "winston": "^3.14.2",
+  "path": "^0.12.7"
+},  
   "engines": {
     "node": ">=22"
   },
