--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,9 @@
     { "src": "api/**/*.js", "use": "@vercel/node" }
   ],
   "routes": [
-    { "src": "/api/(.*)", "dest": "/api/$1.js" }
-  ]
+    { "src": "/api/batch-enrich", "dest": "/api/company-name-fallback.js" }
+  ],
+  "env": {
+    "VERCEL_AUTH_TOKEN": "<BOGYN1NFScxSc3DQRVEnNO5c>"
+  }
 }
