--- a/package.json
+++ b/package.json
@@ -2,16 +2,16 @@
   "type": "module",
   "name": "get-enrich-api",
   "version": "1.1.0",
-  "description": "ShowRevv Lead Enrichment System API for cleaning and enriching lead data.",
+  "description": "ShowRevv Lead Enrichment System API for cleaning and enriching lead data",
   "dependencies": {
-    "next": "15.3.1",
-    "openai": "^4.95.0",
-    "winston": "^3.17.0"
+    "openai": "4.0.0",
+    "winston": "^3.14.2",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "eslint": "^9.24.0",
-    "husky": "^9.1.6",
-    "lint-staged": "^15.2.10"
+    "husky": "^9.1.7",
+    "lint-staged": "^15.5.0"
   },
   "engines": {
     "node": ">=22"
@@ -19,10 +19,16 @@
   "scripts": {
     "start": "vercel dev",
     "deploy": "vercel deploy --prod",
-    "test": "echo Run manual tests as described in script comments.",
+    "test": "echo 'Run manual tests as described in script comments.'",
     "lint": "eslint .",
-    "build": "npm run lint"
+    "build": "eslint . || true"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/cdearman90/get-enrich-api.git"
+  },
+  "author": "cdearman90",
+  "license": "MIT",
   "husky": {
     "hooks": {
       "pre-commit": "lint-staged"
@@ -30,11 +36,5 @@
   },
   "lint-staged": {
     "*.js": "eslint --fix"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/cdearman90/get-enrich-api.git"
-  },
-  "author": "cdearman90",
-  "license": "MIT"
+  }
 }
