--- a/vercel.json
+++ b/vercel.json
@@ -9,15 +9,19 @@
   "routes": [
     {
       "src": "/public-api/batch-enrich",
-      "dest": "/api/batch-enrich.js"
+      "dest": "api/batch-enrich.js"
     },
     {
       "src": "/public-api/batch-enrich-company-name-fallback",
-      "dest": "/api/batch-enrich-company-name-fallback.js"
+      "dest": "api/batch-enrich-company-name-fallback.js"
+    },
+    {
+      "src": "/public-api/batch-enrich-franchise",
+      "dest": "api/batch-enrich-franchise.js"
     },
     {
       "src": "/public-api/batch-clean-titles-and-locations",
-      "dest": "/api/batch-clean-titles-and-locations.js"
+      "dest": "api/batch-clean-titles-and-locations.js"
     }
   ]
 }
