--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "version": "1.1.0",
   "description": "ShowRevv Lead Enrichment System API for cleaning and enriching lead data",
   "dependencies": {
+    "micro": "^10.0.1",
     "openai": "4.0.0",
-    "winston": "^3.14.2",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "winston": "^3.14.2"
   },
   "devDependencies": {
     "eslint": "^9.24.0",
