--- a/package.json
+++ b/package.json
@@ -1,30 +1,26 @@
 {
   "type": "module",
   "name": "get-enrich-api",
-  "version": "1.1.0",
-  "description": "ShowRevv Lead Enrichment System API for cleaning and enriching lead data",
+  "version": "1.0.0",
+  "description": "ShoRevvy Lead Enrichment System API for cleaning and enriching lead data",
   "dependencies": {
+    "@vercel/kv": "^3.0.0",
     "axios": "^1.9.0",
-    "express-rate-limit": "^7.5.0",
     "micro": "^10.0.1",
-    "openai": "4.0.0",
-    "path": "^0.12.7",
+    "openai": "^4.0.0",
     "winston": "^3.14.2"
   },
   "devDependencies": {
     "eslint": "^9.24.0",
     "husky": "^9.1.7",
-    "lint-staged": "^15.5.0"
-  },
-  "engines": {
-    "node": ">=22"
+    "lint-staged": "^15.0.0"
   },
   "scripts": {
     "start": "vercel dev",
     "deploy": "vercel deploy --prod",
-    "test": "echo 'Run manual tests as described in script comments.'",
+    "test": "echo \"Run manual tests as described in script comments.\"",
     "lint": "eslint .",
-    "build": "eslint . || true"
+    "build": "eslint ."
   },
   "repository": {
     "type": "git",
