--- a/vercel.json
+++ b/vercel.json
@@ -4,10 +4,6 @@
     {
       "src": "api/**/*.js",
       "use": "@vercel/node"
-    },
-    {
-      "src": "getcarbrands.js",
-      "use": "@vercel/node"
     }
   ],
   "routes": [
@@ -29,7 +25,8 @@
     },
     {
       "src": "/api/getcarbrands",
-      "dest": "getcarbrands.js"
+      "dest": "api/getcarbrands.js"
     }
   ]
 }
+
